fix textarea text overlap icon

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -111,6 +111,10 @@
         }
     }
 
+    textarea{
+        padding-inline-start: 40px;
+    }
+
     .icon-image {
         position: absolute;
         top: 0;
